added about page

--- a/templates/about.html
+++ b/templates/about.html
@@ -18,7 +18,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/js/ie10-viewport-bug-workaround.js" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="test.css" rel="stylesheet">
+    <link href="main.css" rel="stylesheet">
 
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -29,7 +29,7 @@
   </head>
 
   <body>
-    <a href="https://www.github.com/dherg"> by dherg </a>
+    Developed by <a href="https://www.github.com/dherg"> David Hergenroeder </a> with <a href="http://flask.pocoo.org/"> Flask </a> and the <a href="https://developer.spotify.com/web-api/"> Spotify API</a>.
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="https://maxcdn.bootstrapcdn.com/js/ie10-viewport-bug-workaround.js"></script>
     <!-- jquery -->
