--- a/templates/playlists.html
+++ b/templates/playlists.html
@@ -18,7 +18,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/js/ie10-viewport-bug-workaround.js" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="test.css" rel="stylesheet">
+    <link href="main.css" rel="stylesheet">
 
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
