--- a/templates/index.html
+++ b/templates/index.html
@@ -50,25 +50,26 @@
 
       <div class="row marketing">
         <div class="col-lg-6">
-          <h4>Subheading</h4>
-          <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
+          <h4>Step 1.</h4>
+          <p>Log in to Spotify (so we can make your playlist).</p>
 
-          <h4>Subheading</h4>
-          <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
+          <h4>Step 2.</h4>
+          <p>Choose a playlist to make flowed. The original won't be touched, all of the magic will happen in a new playlist!</p>
 
-          <h4>Subheading</h4>
-          <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+          <h4>Step 3.</h4>
+          <p>Sit back and enjoy your new, smoother playlist!</p>
         </div>
-
         <div class="col-lg-6">
-          <h4>Subheading</h4>
+         <!--  <h4>Subheading</h4>
           <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
 
           <h4>Subheading</h4>
           <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
 
           <h4>Subheading</h4>
-          <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+          <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p> -->
+          <img src={{ url_for('static', filename = 'images/woman-music.jpg') }} alt="Listening to Music" style="width:80%; height:40%">
+
         </div>
       </div>
 
