--- a/templates/about.html
+++ b/templates/about.html
@@ -28,11 +28,30 @@
     <![endif]-->
   </head>
 
-  <body>
-    Developed by <a href="https://www.github.com/dherg"> David Hergenroeder </a> with <a href="http://flask.pocoo.org/"> Flask </a> and the <a href="https://developer.spotify.com/web-api/"> Spotify API</a>.
+  <body style="background: #2EBD59">
+    <div class="container">
+      <div class="header clearfix">
+        <nav>
+          <ul class="nav nav-pills pull-right">
+            <li role="presentation" class="active"><a href="/">Home</a></li>
+            <li role="presentation"><a href="/about">About</a></li>
+              <!-- <li role="presentation"><a href="#">Contact</a></li> -->
+          </ul>
+        </nav>
+        <h3 class="text-muted" style="color: #000000">Playlist Flow</h3>
+      </div>
+      <div class="jumbotron">
+        Developed by <a href="https://www.github.com/dherg"> David Hergenroeder </a> with <a href="http://flask.pocoo.org/"> Flask </a> and the <a href="https://developer.spotify.com/web-api/"> Spotify API</a>.
+      </div>
+      <footer class="footer">
+        <p>&copy; 2016 David Hergenroeder</p>
+      </footer>
+    </div>
+
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="https://maxcdn.bootstrapcdn.com/js/ie10-viewport-bug-workaround.js"></script>
     <!-- jquery -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+
   </body>
 </html>
