--- a/templates/playlists.html
+++ b/templates/playlists.html
@@ -28,15 +28,32 @@
     <![endif]-->
   </head>
 
-  <body>
-    <h1> Choose one of your playlists: </h1>
-    {% for item in playlistnames %}
-      <li><a href="selection?choice={{item}}"> {{item}} </a></li>
-    {% endfor %}
-    <p></p>
-    <p>
-      or <a href="/"> start over from the beginning </a>
-    </p>
+  <body style="background: #2EBD59">
+    <div class="container">
+      <div class="header clearfix">
+        <nav>
+          <ul class="nav nav-pills pull-right">
+            <li role="presentation" class="active"><a href="/">Home</a></li>
+            <li role="presentation"><a href="/about">About</a></li>
+              <!-- <li role="presentation"><a href="#">Contact</a></li> -->
+          </ul>
+        </nav>
+        <h3 class="text-muted" style="color: #000000">Playlist Flow</h3>
+      </div>
+      <div class="jumbotron">
+        <h2> Choose one of your playlists: </h2>
+        {% for item in playlistnames %}
+          <li><a href="selection?choice={{item}}"> {{item}} </a></li>
+        {% endfor %}
+        <p></p>
+        <p>
+          or <a href="/"> start over from the beginning </a>
+        </p>
+      </div>
+      <footer class="footer">
+        <p>&copy; 2016 David Hergenroeder</p>
+      </footer>
+    </div>
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="https://maxcdn.bootstrapcdn.com/js/ie10-viewport-bug-workaround.js"></script>
