--- a/templates/index.html
+++ b/templates/index.html
@@ -51,7 +51,7 @@
 
       <div class="jumbotron">
         <h1>Make Your Playlists Flow</h1>
-        <p class="lead">Log in and choose one of your Spotify playlists to make your music <i>smooooooth</i>.</p>
+        <p class="lead">Log in and choose one of your Spotify playlists to make your music <i>smooth</i>.</p>
         <p><a class="btn btn-lg btn-success" href="/spotifylogin" role="button">Try it!</a></p>
       </div>
 
@@ -86,7 +86,7 @@ box-shadow: 5px 5px 5px #888;">
 
 
       <footer class="footer">
-        <p>&copy; 2016 David Hergenroeder</p>
+        <p> &copy; 2016 David Hergenroeder. <iframe src="https://ghbtns.com/github-btn.html?user=dherg&type=follow&count=false" frameborder="0" scrolling="10" width="170px" height="20px" align="right"></iframe> </p>
       </footer>
 
     </div> <!-- /container -->
