--- a/templates/result.html
+++ b/templates/result.html
@@ -45,7 +45,7 @@
         <a href="{{url}}"> Check it out on Spotify! </a>
       </div>
       <footer class="footer">
-        <p>&copy; 2016 David Hergenroeder</p>
+        <p> &copy; 2016 David Hergenroeder. <iframe src="https://ghbtns.com/github-btn.html?user=dherg&type=follow&count=false" frameborder="0" scrolling="10" width="170px" height="20px" align="right"></iframe> </p>
       </footer>
     </div>
 
